// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ClashConfigBuilder > should group proxies by country when groupByCountry is true 1`] = `
"port: 7890
socks-port: 7891
allow-lan: false
mode: rule
log-level: info
geodata-mode: true
geo-auto-update: true
geodata-loader: standard
geo-update-interval: 24
geox-url:
  geoip: https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/geoip.dat
  geosite: >-
    https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/geosite.dat
  mmdb: >-
    https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/country.mmdb
  asn: >-
    https://github.com/xishang0128/geoip/releases/download/latest/GeoLite2-ASN.mmdb
rule-providers:
  geolocation-!cn:
    type: http
    format: mrs
    behavior: domain
    url: >-
      https://gh-proxy.com/https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo/geosite/geolocation-!cn.mrs
    path: ./ruleset/geolocation-!cn.mrs
    interval: 86400
dns:
  enable: true
  ipv6: true
  respect-rules: true
  enhanced-mode: fake-ip
  nameserver:
    - https://120.53.53.53/dns-query
    - https://223.5.5.5/dns-query
  proxy-server-nameserver:
    - https://120.53.53.53/dns-query
    - https://223.5.5.5/dns-query
  nameserver-policy:
    geosite:cn,private:
      - https://120.53.53.53/dns-query
      - https://223.5.5.5/dns-query
    geosite:geolocation-!cn:
      - https://dns.cloudflare.com/dns-query
      - https://dns.google/dns-query
proxies:
  - name: 🇺🇸 US Node
    server: 1.1.1.1
    port: 8888
    type: ss
    cipher: aes-256-gcm
    password: password
  - name: 🇬🇧 UK Node
    server: 8.8.8.8
    port: 8888
    type: ss
    cipher: aes-256-gcm
    password: password
proxy-groups:
  - type: select
    name: 🚀 Node Select
    proxies:
      - DIRECT
      - REJECT
      - ⚡ Auto Select
      - 🖐️ Manual Switch
      - 🇬🇧 United Kingdom
      - 🇺🇸 United States
  - name: ⚡ Auto Select
    type: url-test
    proxies:
      - 🇺🇸 US Node
      - 🇬🇧 UK Node
    url: https://www.gstatic.com/generate_204
    interval: 300
    lazy: false
  - name: 🖐️ Manual Switch
    type: select
    proxies:
      - 🇺🇸 US Node
      - 🇬🇧 UK Node
  - name: 🇬🇧 United Kingdom
    type: url-test
    proxies:
      - 🇬🇧 UK Node
    url: https://www.gstatic.com/generate_204
    interval: 300
    lazy: false
  - name: 🇺🇸 United States
    type: url-test
    proxies:
      - 🇺🇸 US Node
    url: https://www.gstatic.com/generate_204
    interval: 300
    lazy: false
  - type: select
    name: 🐟 Fall Back
    proxies:
      - DIRECT
      - REJECT
      - 🚀 Node Select
      - ⚡ Auto Select
      - 🖐️ Manual Switch
      - 🇬🇧 United Kingdom
      - 🇺🇸 United States
rules:
  - MATCH,🐟 Fall Back
"
`;

exports[`ClashConfigBuilder > should perform an end-to-end conversion of mixed proxies 1`] = `
"port: 7890
socks-port: 7891
allow-lan: false
mode: rule
log-level: info
geodata-mode: true
geo-auto-update: true
geodata-loader: standard
geo-update-interval: 24
geox-url:
  geoip: https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/geoip.dat
  geosite: >-
    https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/geosite.dat
  mmdb: >-
    https://testingcf.jsdelivr.net/gh/MetaCubeX/meta-rules-dat@release/country.mmdb
  asn: >-
    https://github.com/xishang0128/geoip/releases/download/latest/GeoLite2-ASN.mmdb
rule-providers:
  geolocation-!cn:
    type: http
    format: mrs
    behavior: domain
    url: >-
      https://gh-proxy.com/https://github.com/MetaCubeX/meta-rules-dat/raw/refs/heads/meta/geo/geosite/geolocation-!cn.mrs
    path: ./ruleset/geolocation-!cn.mrs
    interval: 86400
dns:
  enable: true
  ipv6: true
  respect-rules: true
  enhanced-mode: fake-ip
  nameserver:
    - https://120.53.53.53/dns-query
    - https://223.5.5.5/dns-query
  proxy-server-nameserver:
    - https://120.53.53.53/dns-query
    - https://223.5.5.5/dns-query
  nameserver-policy:
    geosite:cn,private:
      - https://120.53.53.53/dns-query
      - https://223.5.5.5/dns-query
    geosite:geolocation-!cn:
      - https://dns.cloudflare.com/dns-query
      - https://dns.google/dns-query
proxies:
  - name: vmess-ws-tls
    server: cloudflare.com
    port: 443
    type: vmess
    uuid: your-uuid
    cipher: auto
    tls: true
    servername: ''
    skip-cert-verify: false
    network: ws
    ws-opts:
      path: /path
      headers:
        Host: server.com
  - name: trojan-node
    server: example.com
    port: 443
    type: trojan
    password: password
    tls: true
    sni: ''
    network: tcp
    skip-cert-verify: false
proxy-groups:
  - type: select
    name: 🚀 Node Select
    proxies:
      - DIRECT
      - REJECT
      - ⚡ Auto Select
      - vmess-ws-tls
      - trojan-node
  - name: ⚡ Auto Select
    type: url-test
    proxies:
      - vmess-ws-tls
      - trojan-node
    url: https://www.gstatic.com/generate_204
    interval: 300
    lazy: false
  - type: select
    name: 🐟 Fall Back
    proxies:
      - DIRECT
      - REJECT
      - 🚀 Node Select
      - ⚡ Auto Select
      - vmess-ws-tls
      - trojan-node
rules:
  - MATCH,🐟 Fall Back
"
`;
